--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
 :root{
-    --fuenteHeading: 'PT Sans', sans-serif;
-    --fuenteParrafos: 'Open Sans', sans-serif;
+    --fuenteP:'Rubik', sans-serif;
     /*Colores*/
     --bg: #0c1421;
     --moradoOscuro: #1d204b;
@@ -29,9 +29,11 @@ body{
     margin: 0 auto;
 }
 h1,h2,h3,h4,h5{
+    font-family: var(--fuenteP);
     color: var(--blanco);
 }
 p{
+    font-family: var(--fuenteP);
     color: var(--pTime);
     z-index: 10;
 }
@@ -49,9 +51,21 @@ button{
 .activo{
     color: var(--blanco);
 }
+.user-data{
+    background-color: var(--morado);
+    border-radius:  2rem 2rem 0 0;
+    padding: 1rem;
+}
+.time{
+    border-radius: 0 0 2rem 2rem;
+    background-color: var(--moradoOscuro);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 .card{
     background-color: var(--moradoOscuro);
-    border-radius: 20px;
+    border-radius: 2rem;
     padding: 1rem;
 }
 .card:hover{
@@ -60,7 +74,7 @@ button{
 .card p{
     font-size: 5rem;
     color: var(--blanco);
-    font-weight: 500;
+    font-weight: 300;
     margin: 0;
 }
 .card-text{
@@ -73,6 +87,8 @@ button{
 .card-text h5{
     margin-top: -1rem;
     color: var(--pTime);
+    font-size: 1.8rem;
+    font-weight: 300;
 }
 .display{
     padding: 0 1.5rem;
@@ -100,18 +116,22 @@ button{
     padding: 1.5rem;
     margin-top: -4rem;
     }
-    
+    .time{
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        row-gap: 1.5rem;
+        padding: 1rem;
+    }
     .seccion{
         display: none;
     }
     
     .mostrar-seccion{
         display: grid !important;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         column-gap: 1rem;
     }
+    .user{
+        grid-row: 1 / 3;
+    }
  }
-   /*display: flex;
-    flex-direction: column;
-    padding: 1.5rem;
-    margin-top: -4rem;*/
