--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
     /*Colores*/
     --bg: #0c1421;
     --moradoOscuro: #1d204b;
-    --morado: #5746ea;
+    --morado: #5a4aeb;
+    --hover:#2c2f62;
     --pTime:#bfc1f1;
     --negro: #000;
     --blanco: #fff;
@@ -13,7 +14,6 @@ html{
     font-size: 62.5%;
     box-sizing: border-box;
 }
-/*tener un box sizing natural que no se aumente cuando pongamos paddings*/
 *, *:before, *:after {
     box-sizing: inherit;
   }
@@ -37,16 +37,23 @@ p{
     color: var(--pTime);
     z-index: 10;
 }
+a{
+    text-decoration: none;
+    color: var(--morado);
+}
+a:hover{
+    color: var(--pTime);
+}
 button{
     color: var(--pTime);
     background: none;
     outline: none;
     border: none;
     font-size: 18px;
-}
-
-button{
     cursor: pointer;
+}
+button:hover{
+    color: var(--blanco);
 }
 .activo{
     color: var(--blanco);
@@ -55,6 +62,21 @@ button{
     background-color: var(--morado);
     border-radius:  2rem 2rem 0 0;
     padding: 1rem;
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+}
+.user-data img{
+    width: 10rem;
+    height: 10rem;
+    border: var(--blanco) 4px solid;
+    border-radius: 5.3rem;
+}
+.name h1{
+    font-family: var(--fuenteP);
+    font-weight: 300;
+    font-size: 2.5rem;
+    margin-top: -2rem;
 }
 .time{
     border-radius: 0 0 2rem 2rem;
@@ -62,14 +84,17 @@ button{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 3rem 2rem;
 }
 .card{
     background-color: var(--moradoOscuro);
-    border-radius: 2rem;
+    border-radius: 0 0 2rem 2rem ;
     padding: 1rem;
+    z-index: 10000;
+
 }
 .card:hover{
-    background-color: var(--morado);
+    background-color: var(--hover);
 }
 .card p{
     font-size: 5rem;
@@ -92,6 +117,13 @@ button{
 }
 .display{
     padding: 0 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 2rem;
+}
+.display img{
+    width: 3rem;
+    
 }
 .exercise{
     display: grid;
@@ -108,7 +140,49 @@ button{
     row-gap: 1.5rem;
   
 }
-@media (min-width: 1008px){
+.orange, .blue, .red, .green, .violet, .yellow{
+    border-radius: 2rem 2rem 0 0;
+    height: 5.5rem;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 2rem;
+    overflow: hidden;
+}
+.orange img, .blue img, .red img, .green img, .violet img, .yellow img{
+    height: 9rem;
+}
+.orange{
+    background-color: #ff8c66;  
+}
+.blue{
+    background-color: #56c2e6;
+}
+.red{
+    background-color: #ff5c7c;
+}
+.green{
+    background-color: #4acf81;
+}
+.violet{
+    background-color: #7536d3;
+}
+.yellow{
+    background-color: #f1c65b;
+}
+.centrar{
+    padding: 2rem 0;
+}
+.attribution{
+    color: var(--blanco);
+    text-align: center;
+    padding-top: 2rem;
+}
+@media (min-width: 1440px){
+    .centrar{
+      position: absolute;
+      top: 10%;
+      left: 10%;
+    }
     .card-text{
     display: flex;
     flex-direction: column;
@@ -117,21 +191,52 @@ button{
     margin-top: -4rem;
     }
     .time{
-        display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        row-gap: 1.5rem;
-        padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 2rem;
+      height: 28rem;
     }
-    .seccion{
-        display: none;
+    .time button{
+        padding: 1rem 0;
     }
     
     .mostrar-seccion{
-        display: grid !important;
         grid-template-columns: repeat(4, 1fr);
         column-gap: 1rem;
     }
     .user{
         grid-row: 1 / 3;
     }
+    .user-data{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding:3rem 2rem;
+        height: 35rem;
+    }
+    .user-data img{
+        width: 40%;
+        height: 40%;
+        border: var(--blanco) 4px solid;
+        border-radius: 6.5rem;
+
+    }
+    .user-info{
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+    }
+    .name{
+  margin-top: -2rem;
+  height: 15rem;
+ }
+ .name h1{
+        font-weight: 300;
+        font-size: 4.5rem;
+    }
+  .span{
+      display: block;
+      margin-top: -3rem;
+  }
  }
