--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,7 +49,6 @@ button{
     background: none;
     outline: none;
     border: none;
-    font-size: 18px;
     cursor: pointer;
 }
 button:hover, .activo{
@@ -64,8 +63,8 @@ button:hover, .activo{
    align-items: center;
 }
 .user-data img{
-    width: 10rem;
-    height: 10rem;
+    width: 8.5rem;
+    height: auto;
     border: var(--blanco) 4px solid;
     border-radius: 5.3rem;
 }
@@ -83,6 +82,9 @@ button:hover, .activo{
     align-items: center;
     padding: 3rem 2rem;
 }
+.time button{
+    font-size: 2rem;
+}
 .card{
     background-color: var(--moradoOscuro);
     border-radius: 0 0 2rem 2rem ;
@@ -94,7 +96,7 @@ button:hover, .activo{
     background-color: var(--hover);
 }
 .card p{
-    font-size: 5rem;
+    font-size: 4rem;
     color: var(--blanco);
     font-weight: 300;
     margin: 0;
@@ -109,7 +111,7 @@ button:hover, .activo{
 .card-text h5{
     margin-top: -1rem;
     color: var(--pTime);
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 300;
 }
 .display{
@@ -127,16 +129,7 @@ button:hover, .activo{
     grid-template-columns: repeat(1, 1fr);
     row-gap: 1.5rem;
 }
-.seccion{
-    display: none;
-}
 
-.mostrar-seccion{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    row-gap: 1.5rem;
-  
-}
 .orange, .blue, .red, .green, .violet, .yellow{
     border-radius: 2rem 2rem 0 0;
     height: 5.5rem;
@@ -174,11 +167,13 @@ button:hover, .activo{
     text-align: center;
     padding-top: 2rem;
 }
-@media (min-width: 1440px){
+ @media (min-width: 768px){
     .centrar{
-      position: absolute;
-      top: 10%;
-      left: 10%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
     .card-text{
     display: flex;
@@ -186,6 +181,9 @@ button:hover, .activo{
     align-items: flex-start;
     padding: 1.5rem;
     margin-top: -4rem;
+    }
+    .card p{
+        font-size: 5rem;
     }
     .card-text h5{
         font-size: 1.8rem;
@@ -201,8 +199,8 @@ button:hover, .activo{
         padding: 1rem 0;
     }
     
-    .mostrar-seccion{
-        grid-template-columns: repeat(4, 1fr);
+    .exercise {
+        grid-template-columns: repeat(2, 1fr);
         column-gap: 1rem;
     }
     .user{
@@ -216,7 +214,7 @@ button:hover, .activo{
         height: 35rem;
     }
     .user-data img{
-        width: 30%;
+        width: 35%;
         height: auto;
         border: var(--blanco) 4px solid;
         border-radius: 6.5rem;
@@ -239,4 +237,10 @@ button:hover, .activo{
       display: block;
       margin-top: -3rem;
   }
+ }
+ @media (min-width: 1024px){
+    .exercise {
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 1rem;
+    }
  }
